--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,12 @@
 div {
-  color:red;
+  font-size: 36px;
+}
+.wrapper {
+  color: red;
+}
+#one {
+  color: blue;
+}
+div:hover {
+  font-size: 48px;
 }
