--- a/styles/main.css
+++ b/styles/main.css
@@ -1,11 +1,12 @@
-.sample1 , .sample2 {
+.sample1, .sample2 {
   font-size: 36px;
-  color: red;
+  color: blue;
 }
-.wrapper{
+
+.wrapper {
   font-size: 38px;
 }
 .wrapper .contents {
   font-size: 26px;
-  color: blue;
-}
+  color: green;
+}/*# sourceMappingURL=main.css.map */
