--- a/lp_reproduction/styles/main.css
+++ b/lp_reproduction/styles/main.css
@@ -1,1 +1,111 @@
-/*# sourceMappingURL=main.css.map */
+@charset "UTF-8";
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+.lp-wrap {
+  font-family: "小塚ゴシック Pro", 游ゴシック, Meiryo, sans-serif;
+  font-size: 16px;
+  line-height: 1.8;
+  max-width: 1100px;
+  width: 94%;
+  margin: 0 auto;
+}
+
+.intro-container {
+  background-image: url(../img/head_bg.jpg);
+  background-size: cover;
+  margin-top: -20px;
+  padding: 160px 0;
+  color: #131d34;
+}
+
+.intro-wrapper {
+  background-color: #fff;
+  max-width: 700px;
+  margin: 0 auto 2em;
+  padding: 2em 1em;
+  width: 100%;
+  border: solid 6px #000;
+  border-radius: 20px;
+  text-align: center;
+  line-height: 1.8;
+}
+
+h1 {
+  margin: 0;
+  font-size: 38px;
+  line-height: 1;
+}
+
+.h1-japanese {
+  margin-top: 0px;
+  font-size: 16px;
+}
+
+.intro-p-first {
+  font-size: 22px;
+  margin: 0 0 10px;
+}
+
+.intro-p {
+  line-height: 1.8;
+}
+
+.yellow-line {
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 1.2;
+  background: linear-gradient(transparent 60%, #f9ff10 60%);
+  margin: 0;
+}
+
+.entry-buttun {
+  display: block;
+  background-color: #009bcf;
+  margin: 1em auto 0;
+  padding: 1em;
+  max-width: 560px;
+  border-radius: 4px;
+  color: #fff;
+}
+
+.warning {
+  font-size: 0.8em;
+  line-height: 1.8;
+  margin: 0;
+}
+
+.intro-footer-container {
+  width: 100%;
+  background-color: #000;
+  padding: 140px 0 3em;
+}
+
+.intro-footer-wrapper {
+  max-width: 800px;
+  background-color: #000;
+  color: #fff;
+  margin: 0 auto;
+}
+.intro-footer-wrapper h2 {
+  text-align: center;
+  border-bottom: solid 1px #fff;
+  font-size: 26px;
+  font-weight: normal;
+  line-height: 1.1;
+  padding: 0 0 0.2em;
+  margin: 0 0 0.5em;
+}
+.intro-footer-wrapper p {
+  margin-top: 0;
+  margin-bottom: 10px;
+}/*# sourceMappingURL=main.css.map */
