--- a/lp_reproduction/styles/main.scss
+++ b/lp_reproduction/styles/main.scss
@@ -16,7 +16,7 @@ a {
   margin: 0 auto;
 }
 .intro-container{
-  background-image: url(../img/head_bg.jpg);
+  background: url(../img/head_bg.jpg) no-repeat center center ;
   background-size: cover;
   margin-top: -20px;
   padding: 160px 0;
